examples/test/testpolicy4079.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4079
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key19: value14
      key21: value49
      key49: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value9
      podSelector:
        matchLabels:
          key31: value9
